--- a/00_why_python.html
+++ b/00_why_python.html
@@ -1861,7 +1861,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>FORTRAN and Matlab are used for decades, and have a lot of libraries for all kinds of scientific needs. Although now main functionality is covered by python modules, there are still many specific areas where no python solution is available. This problem can be partly solved by python's integration with other languages (<a href="http://mlabwrap.sourceforge.net/">MLabWrap</a>, <a href="http://www.f2py.com/">F2py</a>).</p>
+<p>FORTRAN and Matlab are used for decades, and have a lot of libraries for all kinds of scientific needs. Although now main functionality is covered by python modules, there are still many specific areas where no python solution is available. This problem can be partly solved by python&#39;s integration with other languages (<a href="http://mlabwrap.sourceforge.net/">MLabWrap</a>, <a href="http://www.f2py.com/">F2py</a>).</p>
 </div>
 </div>
 </div>
@@ -1880,7 +1880,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>... if you don't use vectorization or <a href="http://www.cython.org/">Cython</a> when loops are inevitable. Critical parts still can be written in FORTRAN or C.</p>
+<p>... if you don&#39;t use vectorization or <a href="http://www.cython.org/">Cython</a> when loops are inevitable. Critical parts still can be written in FORTRAN or C.  </p>
 </div>
 </div>
 </div>
@@ -1923,8 +1923,10 @@ jQuery(document).ready(function($) {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li><p>Though it has been around for two decades, it exploded into use in the atmospheric sciences just a few years ago after the development community converged upon the standard scientific packages (e.g., array handling) needed for atmospheric sciences work.</p></li>
-<li><p>Much more robust and flexible workflow. Everything from data download to data analysys, visualization and finally writing a paper can be done in one environment.</p></li>
+<li><p>Though it has been around for two decades, it exploded into use in the atmospheric sciences just a few years ago after the development community converged upon the standard scientific packages (e.g., array handling) needed for atmospheric sciences work.</p>
+</li>
+<li><p>Much more robust and flexible workflow. Everything from data download to data analysys, visualization and finally writing a paper can be done in one environment.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -1935,8 +1937,10 @@ jQuery(document).ready(function($) {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li><p>Ability to access innovations from industries outside of the Earth sciences (cloud computing, big data, mobile computing).</p></li>
-<li><p>Institutional support includes groups at Lawrence Livermore National Laboratory’s Program for Climate Model Diagnosis and Intercomparison, NCAR’s Computer Information Systems Laboratory, and the British Atmospheric Data Centre.</p></li>
+<li><p>Ability to access innovations from industries outside of the Earth sciences (cloud computing, big data, mobile computing).</p>
+</li>
+<li><p>Institutional support includes groups at Lawrence Livermore National Laboratory’s Program for Climate Model Diagnosis and Intercomparison, NCAR’s Computer Information Systems Laboratory, and the British Atmospheric Data Centre.</p>
+</li>
 </ul>
 </div>
 </div>
