--- a/02_python_basics.html
+++ b/02_python_basics.html
@@ -1765,7 +1765,8 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><a href="http://www.python.org/">Python</a> is a widely used general-purpose, high-level programming language. Its design philosophy emphasizes code readability, and its syntax allows programmers to express concepts in fewer lines of code than would be possible in languages such as C. The language provides constructs intended to enable clear programs on both a small and large scale.</p>
+<p><a href="http://www.python.org/">Python</a> is a widely used general-purpose, high-level programming language. Its design philosophy emphasizes code readability, and its syntax allows programmers to express concepts in fewer lines of code than would be possible in languages 
+such as C. The language provides constructs intended to enable clear programs on both a small and large scale.</p>
 <p>-- <cite>From Wikipedia, the free encyclopedia</cite></p>
 </div>
 </div>
@@ -2206,7 +2207,7 @@ float
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>In IPython you can get the list of object's methods and attributes by typing dot and pressing TAB:</p>
+<p>In IPython you can get the list of object&#39;s methods and attributes by typing dot and pressing TAB:</p>
 </div>
 </div>
 </div>
@@ -2775,7 +2776,7 @@ float
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Let's have a look at the 4th element of our list:</p>
+<p>Let&#39;s have a look at the 4th element of our list:</p>
 </div>
 </div>
 </div>
@@ -2815,7 +2816,7 @@ float
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>It's also a list, and its values can be accessed by indexes as well:</p>
+<p>It&#39;s also a list, and its values can be accessed by indexes as well:</p>
 </div>
 </div>
 </div>
@@ -2895,7 +2896,7 @@ float
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Slice will start with the first slice index and go up to but not including the second slice index.</p>
+<p>Slice will start with the first slice index and go up to but not including the second slice index. </p>
 </div>
 </div>
 </div>
@@ -3000,7 +3001,7 @@ three
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Two interesting thins here. First: indentation, it's in the code, you must use it, otherwise code will not work:</p>
+<p>Two interesting thins here. First: indentation, it&#39;s in the code, you must use it, otherwise code will not work:</p>
 </div>
 </div>
 </div>
@@ -3327,7 +3328,7 @@ Freezing
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>But generally I think it's a bad idea, because your name-space is populated by things that you don't really need and it's hard to tell where the function comes from.</p>
+<p>But generally I think it&#39;s a bad idea, because your name-space is populated by things that you don&#39;t really need and it&#39;s hard to tell where the function comes from.</p>
 </div>
 </div>
 </div>
