--- a/03_numpy_arrays.html
+++ b/03_numpy_arrays.html
@@ -1970,7 +1970,7 @@ array([[ 1950.   ,     1.   ,    -0.06 ],
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>So it's a <em>row-major</em> order. Matlab and Fortran use <em>column-major</em> order for arrays.</p>
+<p>So it&#39;s a <em>row-major</em> order. Matlab and Fortran use <em>column-major</em> order for arrays.</p>
 </div>
 </div>
 </div>
@@ -2050,7 +2050,7 @@ dtype(&apos;float64&apos;)
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>You can't assign value of different type to element of the numpy array:</p>
+<p>You can&#39;t assign value of different type to element of the numpy array:</p>
 </div>
 </div>
 </div>
@@ -2735,7 +2735,7 @@ array([[ 1950.   ,    10.   ,    -0.379],
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>You don't have to create separate variable for mask, but apply it directly. Here instead of first five rows I show five last rows:</p>
+<p>You don&#39;t have to create separate variable for mask, but apply it directly. Here instead of first five rows I show five last rows:</p>
 </div>
 </div>
 </div>
