--- a/04_work_with_different_data_formats.html
+++ b/04_work_with_different_data_formats.html
@@ -1829,7 +1829,8 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>We use <em>uint8</em> data type. <a href="http://docs.scipy.org/doc/numpy/user/basics.types.html">List of numpy data types</a></p>
+<p>We use <em>uint8</em> data type. 
+<a href="http://docs.scipy.org/doc/numpy/user/basics.types.html">List of numpy data types</a></p>
 </div>
 </div>
 </div>
@@ -2833,7 +2834,7 @@ UzUAAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Let's mask all land and missing values:</p>
+<p>Let&#39;s mask all land and missing values:</p>
 </div>
 </div>
 </div>
@@ -3560,7 +3561,7 @@ DAAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Check variable's shape:</p>
+<p>Check variable&#39;s shape:</p>
 </div>
 </div>
 </div>
@@ -4547,7 +4548,7 @@ Length: 30793412 (29M) (unauthoritative)
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>It's not really file id, it's <em>netcdf_file</em> object, that have some methods and attributes:</p>
+<p>It&#39;s not really file id, it&#39;s <em>netcdf_file</em> object, that have some methods and attributes:</p>
 </div>
 </div>
 </div>
@@ -4683,7 +4684,7 @@ Length: 30793412 (29M) (unauthoritative)
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>This time we create <em>netcdf_variable</em> object, that contain among other things attributes of the netCDF variable as well as data themselves.</p>
+<p>This time we create <em>netcdf_variable</em> object, that contain among other things attributes of the netCDF variable as well as data themselves. </p>
 </div>
 </div>
 </div>
@@ -5810,7 +5811,7 @@ WQylDiv0OAAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Data are packed. In order to unpack we have to use <em>scale_factor</em> and <em>add_offset</em> values from attributes of the netCDF <em>air</em> variable. We also convert to <span class="math">\(^{\circ}\)</span>C:</p>
+<p>Data are packed. In order to unpack we have to use <em>scale_factor</em> and <em>add_offset</em> values from attributes of the netCDF <em>air</em> variable. We also convert to $^{\circ}$C:</p>
 </div>
 </div>
 </div>
@@ -6815,7 +6816,7 @@ rkJggg==
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li><a href="http://www.pyngl.ucar.edu/Nio.shtml">PyNio - library that reads NetCDF, GRIB, HDF and so on ...</a></li>
+<li><a href="http://www.pyngl.ucar.edu/Nio.shtml">PyNio - library that reads NetCDF, GRIB, HDF and so on ... </a></li>
 <li><a href="http://netcdf4-python.googlecode.com/svn/trunk/docs/netCDF4-module.html">netCDF4 - advanced netCDF module</a></li>
 <li><a href="http://wiki.scipy.org/Cookbook">Scipy cookbook</a></li>
 </ul>
