--- a/05_Graphs_and_maps_Matplotlib_and_Basemap.html
+++ b/05_Graphs_and_maps_Matplotlib_and_Basemap.html
@@ -1774,7 +1774,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Let's prepare some data:</p>
+<p>Let&#39;s prepare some data:</p>
 </div>
 </div>
 </div>
