--- a/07_Other_modules_for_geoscientists.html
+++ b/07_Other_modules_for_geoscientists.html
@@ -1784,7 +1784,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><a href="http://scitools.org.uk/iris/">Iris</a> seeks to provide a powerful, easy to use, and community-driven Python library for analysing and visualising meteorological and oceanographic data sets. Kind of Ferret replacement. Developed in the Met Office by group of 7 full time developers. There are more than 300 active python users in Met Office.</p>
+<p> <a href="http://scitools.org.uk/iris/">Iris</a> seeks to provide a powerful, easy to use, and community-driven Python library for analysing and visualising meteorological and oceanographic data sets. Kind of Ferret replacement. Developed in the Met Office by group of 7 full time developers. There are more than 300 active python users in Met Office.</p>
 <p>With Iris you can:</p>
 <ul>
 <li>Use a single API to work on your data, irrespective of its original format.</li>
@@ -13120,7 +13120,7 @@ Optional arguments:
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Let's download one more file from NCEP reanalysis data:</p>
+<p>Let&#39;s download one more file from NCEP reanalysis data: </p>
 </div>
 </div>
 </div>
@@ -13800,7 +13800,7 @@ wq2PUJVTwmAAAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Note that we don't have to apply <em>scale factor</em> and <em>add offset</em>, it's done automatically.</p>
+<p>Note that we don&#39;t have to apply <em>scale factor</em> and <em>add offset</em>, it&#39;s done automatically.</p>
 </div>
 </div>
 </div>
