--- a/interpolation_between_grids_with_basemap.html
+++ b/interpolation_between_grids_with_basemap.html
@@ -1748,9 +1748,10 @@ jQuery(document).ready(function($) {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Task:</strong></p>
-<pre><code>Interpolate data from regular to curvilinear grid</code></pre>
-<p><strong>Solution:</strong></p>
-<pre><code>Basemap.interp function</code></pre>
+<pre><code>Interpolate data from regular to curvilinear grid
+</code></pre><p><strong>Solution:</strong></p>
+<pre><code>Basemap.interp function
+</code></pre>
 </div>
 </div>
 </div>
@@ -1834,7 +1835,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>We also need coordinates of the curvilinear grid:</p>
+<p>We also need coordinates of the curvilinear grid: </p>
 </div>
 </div>
 </div>
@@ -1856,7 +1857,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Let's have a look at our curvilinear grid:</p>
+<p>Let&#39;s have a look at our curvilinear grid:</p>
 </div>
 </div>
 </div>
@@ -3572,7 +3573,7 @@ array([   0. ,    2.5,    5. ,    7.5,   10. ,   12.5,   15. ,   17.5,
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>There are couple of problems with this longitude. First - Basemap wants it to be in the -180:180 format, not 0:360. This can be fixed:</p>
+<p>There are couple of problems with this longitude. First - Basemap wants it to be in the -180:180 format, not 0:360. This can be fixed: </p>
 </div>
 </div>
 </div>
@@ -4925,7 +4926,7 @@ array([-90. , -87.5, -85. , -82.5, -80. , -77.5, -75. , -72.5, -70. ,
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Here as an input we use our modified 1d coordinate variables and data, as well as two 2d arrays with coordinates of curvilinear grid we interpolate to. You can change type of interpolation by setting the <em>order</em> argument. It is 0 for nearest-neighbor interpolation, 1 for bilinear interpolation, 3 for cubic spline (default 1).</p>
+<p>Here as an input we use our modified 1d coordinate variables and data, as well as two 2d arrays with coordinates of curvilinear grid we interpolate to. You can change type of interpolation by setting the <em>order</em> argument. It is 0 for nearest-neighbor interpolation, 1 for bilinear interpolation, 3 for cubic spline (default 1). </p>
 </div>
 </div>
 </div>
@@ -5963,7 +5964,7 @@ QXYYwxjGMC5gDEF2GMMYxjAuYPw/prNiGddstq4AAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Not very clear what we get here. Let's put this data on the map:</p>
+<p>Not very clear what we get here. Let&#39;s put this data on the map:</p>
 </div>
 </div>
 </div>
@@ -7507,7 +7508,7 @@ RERcTwmPiIiIuJ4SHhEREXG9/w8SYs3q8/gZIQAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Look quite similar to me :)</p>
+<p>Look quite similar to me :)  </p>
 </div>
 </div>
 </div>
