--- a/links.html
+++ b/links.html
@@ -1775,7 +1775,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><a href="https://github.com/ipython/ipython/wiki/A-gallery-of-interesting-IPython-Notebooks">A gallery of interesting IPython Notebooks</a> - constant source of inspiration :)</p>
+<p><a href="https://github.com/ipython/ipython/wiki/A-gallery-of-interesting-IPython-Notebooks">A gallery of interesting IPython Notebooks</a> - constant source of inspiration :) </p>
 </div>
 </div>
 </div>
@@ -1920,7 +1920,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><a href="http://geosci.uchicago.edu/~rtp1/PrinciplesPlanetaryClimate/index.html">Principles of Planetary Climate</a> - includes a large collection of Python examples</p>
+<p><a href="http://geosci.uchicago.edu/~rtp1/PrinciplesPlanetaryClimate/index.html">Principles of Planetary Climate</a> - includes a large collection of Python examples </p>
 </div>
 </div>
 </div>
@@ -1948,7 +1948,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><a href="http://ferret.pmel.noaa.gov/Ferret/documentation/pyferret">pyFerret</a> - PyFerret is a Python module wrapping Ferret. The pyferret module provides Python functions so Python users can easily take advantage of the Ferret's abilities to retrieve, manipulate, visualize, and save data. There are also functions to move data between Python and the Ferret engine. Python scripts used as Ferret external functions.</p>
+<p><a href="http://ferret.pmel.noaa.gov/Ferret/documentation/pyferret">pyFerret</a> - PyFerret is a Python module wrapping Ferret.  The pyferret module provides Python functions so Python users can easily take advantage of the Ferret&#39;s abilities to retrieve, manipulate, visualize, and save data.  There are also functions to move data between Python and the Ferret engine.   Python scripts used as Ferret external functions.</p>
 </div>
 </div>
 </div>
@@ -2038,7 +2038,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><a href="http://proj.badc.rl.ac.uk/cedaservices/wiki/JASMIN/CommunityIntercomparisonSuite">jasmin-cis</a> - This is a community effort to develop an automated model/data community intercomparison suite (CIS) within the JASMIN environment at the Centre for Environmental Data Archiving (CEDA) that will provide automated scientific analysis of heterogeneous datasets from models and observations.</p>
+<p><a href="http://proj.badc.rl.ac.uk/cedaservices/wiki/JASMIN/CommunityIntercomparisonSuite">jasmin-cis</a> -  This is a community effort to develop an automated model/data community intercomparison suite (CIS) within the JASMIN environment at the Centre for Environmental Data Archiving (CEDA) that will provide automated scientific analysis of heterogeneous datasets from models and observations.</p>
 </div>
 </div>
 </div></p>
