--- a/near_realtime_data_from_arctic_ice_mass_balance_buoys.html
+++ b/near_realtime_data_from_arctic_ice_mass_balance_buoys.html
@@ -1748,7 +1748,7 @@ jQuery(document).ready(function($) {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a href="http://nbviewer.ipython.org/urls/dl.dropboxusercontent.com/u/354885/notebooks/Pub-01-Buoys-Active.ipynb">Notebook file</a></p>
-<p><a href="https://twitter.com/ArcticIo">Author's twitter</a></p>
+<p><a href="https://twitter.com/ArcticIo">Author&#39;s twitter</a></p>
 <p>Arctic sea ice thickness is a very important information and tells a lot about the state of the floating ice sheet. Unfortunately direct measurements are rare and an area-wide assessment from the ground is too costly. Satellites can fill the gap by using freeboard as a proxy but there are still some obstacles like e.g. determining snow cover. Mass balance buoys offer a near realtime view at a few sites and show the characteristics of melting sea ice in summer and freezing in winter. This notebook accesses latest available data and plots daily thickness, temperature, snow cover and drift of the buoys.</p>
 <p>It should be said the data shown here is from a live source and not corrected. The Buoys are not maintained and have to stand forces like strong storms, curious ice bears and hungry foxes. The time lapse video below, shot in 2011, shows the conditions during May to July until the buoy tilted over because the carrying floe melted away.</p>
 </div>
@@ -1798,10 +1798,14 @@ jQuery(document).ready(function($) {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>more information is available here:</p>
 <ul>
-<li><p><a href="http://imb.crrel.usace.army.mil/images/Map_Current.jpg">Map of the current Buoy positions</a></p></li>
-<li><p><a href="http://imb.crrel.usace.army.mil/newdata.htm">Data</a></p></li>
-<li><p><a href="http://forum.arctic-sea-ice.net/index.php/topic,327.msg7724.html#msg7724">pics</a></p></li>
-<li><p><a href="http://www.youtube.com/watch?v=jCB2E48tu3Q">video</a></p></li>
+<li><p><a href="http://imb.crrel.usace.army.mil/images/Map_Current.jpg">Map of the current Buoy positions</a>  </p>
+</li>
+<li><p><a href="http://imb.crrel.usace.army.mil/newdata.htm">Data</a>  </p>
+</li>
+<li><p><a href="http://forum.arctic-sea-ice.net/index.php/topic,327.msg7724.html#msg7724">pics</a>  </p>
+</li>
+<li><p><a href="http://www.youtube.com/watch?v=jCB2E48tu3Q">video</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -1926,7 +1930,7 @@ WARNING: pylab import has clobbered these variables: [&apos;datetime&apos;]
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The buoys names are coded with the year of deployment, an 'A' indicates the first buoy of the year. Interesting for 2013 are:</p>
+<p>The buoys names are coded with the year of deployment, an &#39;A&#39; indicates the first buoy of the year. Interesting for 2013 are:</p>
 </div>
 </div>
 </div>
