--- a/northern_cryosphere_metrics_rendered_with_colors.html
+++ b/northern_cryosphere_metrics_rendered_with_colors.html
@@ -1748,7 +1748,7 @@ jQuery(document).ready(function($) {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a href="http://nbviewer.ipython.org/urls/dl.dropboxusercontent.com/u/354885/notebooks/Pub-02-Cryo-Colors.ipynb">Notebook file</a></p>
-<p><a href="https://twitter.com/ArcticIo">Author's twitter</a></p>
+<p><a href="https://twitter.com/ArcticIo">Author&#39;s twitter</a></p>
 <p>Arctic sea ice and snow cover and are two of the most prominent features of the cryosphere of the northern hemisphere and can be seen with a naked eye from the Moon. Measurements of sea ice area started around 1979 and snow cover a bit earlier. Both show a strong seasonal signal and area also a decline over the three decades. Even stronger is the decline calculated by a sea ice model run by the <a href="http://psc.apl.washington.edu/wordpress/research/projects/arctic-sea-ice-volume-anomaly/">Polar Science Center</a>, Washington. PIOMAS outputs daily sea ice volume for the same time allowing a good comparison of the three data sets. Instead of the usual line charts this notebook translates the daily data into a color range. Changes within a dataset are far better visible, while maintaining comparability.</p>
 </div>
 </div>
@@ -1758,7 +1758,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="a-preview-of-the-final-results">A preview of the final results:</h3>
+<h3 id="a-preview-of-the-final-results-">A preview of the final results:</h3>
 </div>
 </div>
 </div>
@@ -4834,7 +4834,7 @@ AAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>I hope you'll like my tendency to spend similar variables the same amount of characters. Readability tops orthography ;)</p>
+<p>I hope you&#39;ll like my tendency to spend similar variables the same amount of characters. Readability tops orthography ;)</p>
 </div>
 </div>
 </div>
@@ -4885,7 +4885,7 @@ shape: (365, 35), min: 3.261, max: 33.035
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now same data with volume encoded as color.</p>
+<p>Now same data with volume encoded as color. </p>
 </div>
 </div>
 </div>
