--- a/seaborn_library.html
+++ b/seaborn_library.html
@@ -2824,7 +2824,7 @@ mXWIh7qZWYd4qJuZdYiHuplZh3iom5l1iIe6mVmH/D+ZlR3/N/DBmgAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>They do the job - show some data, but also have certain 1990s flaivor :)</p>
+<p>They do the job - show some data, but also have certain 1990s flaivor :) </p>
 <p>And now we just import <code>seaborn</code> library:</p>
 </div>
 </div>
@@ -4013,7 +4013,7 @@ iGGWJKkQwyxJUiH/D2MyN+sOPULhAAAAAElFTkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Same plots, but look much better. You can tweek some basic styling:</p>
+<p>Same plots, but look much better. You can tweek some basic styling: </p>
 </div>
 </div>
 </div>
@@ -4449,7 +4449,7 @@ AAANE+YAABomzAEANEyYAwBomDAHANAwYQ4AoGH/H32mSroQj7IUAAAAAElFTkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>But <code>seaborn</code> is mainly not about pretty plots, it's about pretty statistical plots. Regression for example:</p>
+<p>But <code>seaborn</code> is mainly not about pretty plots, it&#39;s about pretty statistical plots. Regression for example:</p>
 </div>
 </div>
 </div>
