--- a/komod-mitplot-draw-transect.html
+++ b/komod-mitplot-draw-transect.html
@@ -1748,10 +1748,10 @@ jQuery(document).ready(function($) {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Task:</strong></p>
-<pre><code>Draw a grid and a transect with PyNGL module</code></pre>
-<p><strong>Solution:</strong></p>
-<pre><code>komod module</code></pre>
-<p><a href="https://raw.github.com/koldunovn/earthpy.org/master/content/earthpy_mitplot2.ipynb"><strong>Notebook file</strong></a></p>
+<pre><code>Draw a grid and a transect with PyNGL module
+</code></pre><p><strong>Solution:</strong></p>
+<pre><code>komod module
+</code></pre><p><a href="https://raw.github.com/koldunovn/earthpy.org/master/content/earthpy_mitplot2.ipynb"><strong>Notebook file</strong></a></p>
 </div>
 </div>
 </div>
@@ -1842,7 +1842,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now we can plot our grid. This function use centers of the grid boxes, not corners, so result might not be a perfectly accurate representation of your grid, but rather rough estimate of its shape and density. Only necessary input parameters are 2d arrays of lats and lons:</p>
+<p>Now we can plot our grid. This function use centers of the grid boxes, not corners, so result might not be  a perfectly accurate representation of your grid, but rather rough estimate of its shape and density. Only necessary input parameters are 2d arrays of lats and lons: </p>
 </div>
 </div>
 </div>
@@ -3969,7 +3969,7 @@ ZWwAQWRvYmUtMi4wCjmTdA0AAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>In this case everything is very simple and rectangular. Let's have a look at more interesting case. We will use a grid from one of the <a href="http://www.mpimet.mpg.de/en/science/models/mpiom.html">MPIOM</a> configurations, and you can download this sample file from <a href="https://dl.dropboxusercontent.com/u/107639/GR15s.nc">here</a>.</p>
+<p>In this case everything is very simple and rectangular. Let&#39;s have a look at more interesting case. We will use a grid from one of the <a href="http://www.mpimet.mpg.de/en/science/models/mpiom.html">MPIOM</a> configurations, and you can download this sample file from <a href="https://dl.dropboxusercontent.com/u/107639/GR15s.nc">here</a>.</p>
 </div>
 </div>
 </div>
@@ -11338,7 +11338,7 @@ dEVYdHBzOkxldmVsAEFkb2JlLTIuMAo5k3QNAAAAAElFTkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Very dense grid, you can hardly see any details. We can show only every n<span class="math">\(^{th}\)</span> element of grid by specifying <em>every</em> parameter:</p>
+<p>Very dense grid, you can hardly see any details. We can show only every n$^{th}$ element of grid by specifying <em>every</em> parameter:</p>
 </div>
 </div>
 </div>
@@ -17190,7 +17190,7 @@ MDI6MDAU3xdLAAAAJXRFWHRkYXRlOm1vZGlmeQAyMDEzLTA0LTE5VDIzOjEyOjI5KzAyOjAwZYKv
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Yes I know there is an ugly white in the middle, but fixing it would require a bit more effort than I want to invest in this function :) At the end it do the thing it was created for - show how the grid looks like.</p>
+<p>Yes I know there is an ugly white in the middle, but fixing it would require a bit more effort than I want to invest in this function :) At the end it do the thing it was created for - show how the grid looks like. </p>
 </div>
 </div>
 </div>
@@ -24576,7 +24576,7 @@ OkxldmVsAEFkb2JlLTIuMAo5k3QNAAAAAElFTkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now we are almost ready to plot a transect. But first let's have a look at its position on the map and how its related to the grid. For this we use <strong>komod.pltgrd_line</strong> function. We have to provide lat/lon arrays with coordinates and also start and end points of your transect:</p>
+<p>Now we are almost ready to plot a transect. But first let&#39;s have a look at its position on the map and how its related to the grid. For this we use <strong>komod.pltgrd_line</strong> function. We have to provide lat/lon arrays with coordinates and also start and end points of your transect:  </p>
 </div>
 </div>
 </div>
@@ -26725,7 +26725,7 @@ dA0AAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>It's maybe a bit hard to see, but there is a line now at the center of the Atlantic Ocean. This function uses <a href="http://www.pyngl.ucar.edu/Functions/Ngl.gc_interp.shtml">Ngl.gc_interp</a> to calculate positions of the points between the end points. Number of intermediate points is 10 by default, and can be changed (<em>npoints</em> parameter).</p>
+<p>It&#39;s maybe a bit hard to see, but there is a line now at the center of the Atlantic Ocean. This function uses <a href="http://www.pyngl.ucar.edu/Functions/Ngl.gc_interp.shtml">Ngl.gc_interp</a> to calculate positions of the points between the end points. Number of intermediate points is 10 by default, and can be changed (<em>npoints</em> parameter).</p>
 </div>
 </div>
 </div>
@@ -29199,7 +29199,7 @@ ZWwAQWRvYmUtMi4wCjmTdA0AAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>With only 10 points between start and end the transect look kind of rough. Let's increase number of points:</p>
+<p>With only 10 points between start and end the transect look kind of rough. Let&#39;s increase number of points:</p>
 </div>
 </div>
 </div>
