--- a/komod-mitplot-drawmap.html
+++ b/komod-mitplot-drawmap.html
@@ -1748,10 +1748,10 @@ jQuery(document).ready(function($) {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Task:</strong></p>
-<pre><code>Quickly draw maps with PyNGL module</code></pre>
-<p><strong>Solution:</strong></p>
-<pre><code>komod module</code></pre>
-<p><a href="http://nbviewer.ipython.org/urls/raw.github.com/koldunovn/earthpy.org/master/content/earthpy_mitplot.ipynb"><strong>Notebook file</strong></a></p>
+<pre><code>Quickly draw maps with PyNGL module
+</code></pre><p><strong>Solution:</strong></p>
+<pre><code>komod module
+</code></pre><p><a href="http://nbviewer.ipython.org/urls/raw.github.com/koldunovn/earthpy.org/master/content/earthpy_mitplot.ipynb"><strong>Notebook file</strong></a></p>
 </div>
 </div>
 </div>
@@ -1760,9 +1760,9 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The PyNGL module produce very nice looking maps, and it's capabilities in fine tuning the resulting image in many cases are much better compared to matplotlib Basemap module. However this flexibility come at a price: in order to draw a map of an acceptable appearance one has to write quite a long script, and specify many parameters. Of course once you find your &quot;best ever&quot; set of parameters, you basically copy/paste them from one script to another with only slight modifications. But at some point you get annoyed by this long sheets of code, that by the way do not look very nice in IPython notebooks, and you write a wrapper function.</p>
+<p>The PyNGL module produce very nice looking maps, and it&#39;s capabilities in fine tuning the resulting image in many cases are much better compared to matplotlib Basemap module. However this flexibility come at a price: in order to draw a map of an acceptable appearance one has to write quite a long script, and specify many parameters. Of course once you find your &quot;best ever&quot; set of parameters, you basically copy/paste them from one script to another with only slight modifications. But at some point you get annoyed by this long sheets of code, that by the way do not look very nice in IPython notebooks, and you write a wrapper function.</p>
 <p>This is exactly what happens to me, and here I present several functions, that allow you relatively easily to create maps with PyNGL. This functions are part of the <a href="https://github.com/koldunovn/komod"><strong>komod module</strong></a>, that I wrote for manipulation with MITgsm data. However plotting functions are not MITgcm specific, and can be used for any 2D (and also, as you will see, 3D and 4D) data that have lat/lon coordinates.</p>
-<p>In order to make <em>komod</em> work you have to first install numpy, scipy, matplotlib and PyNGL. In order to make this tutorial work, you have to have ether gv (viewer of PostScript and PDF files) or ImageMagick (*nix image processing) installed. If you done with this, let's get started :)</p>
+<p>In order to make <em>komod</em> work you have to first install numpy, scipy, matplotlib and PyNGL. In order to make this tutorial work, you have to have ether gv (viewer of PostScript and PDF files) or ImageMagick (*nix image processing) installed. If you done with this, let&#39;s get started :)</p>
 </div>
 </div>
 </div>
@@ -1962,7 +1962,7 @@ Saving to: &#96;temperature_annual_5deg.nc.1&apos;
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>This command creates .ps file (<em>output.ps</em> by default) with the map in your working directory. If you have gv installed, then window with the map should pop up. If not, let's convert ps file to png:</p>
+<p>This command creates .ps file (<em>output.ps</em> by default) with the map in your working directory. If you have gv installed, then window with the map should pop up. If not, let&#39;s convert ps file to png: </p>
 </div>
 </div>
 </div>
@@ -8548,7 +8548,7 @@ OZN0DQAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>If you want to change color scheme it's also possible. You have to choose one from <a href="http://www.pyngl.ucar.edu/Graphics/color_table_gallery.shtml">PyNGL color maps</a>, and in some cases also adjust start and end colors:</p>
+<p>If you want to change color scheme it&#39;s also possible. You have to choose one from <a href="http://www.pyngl.ucar.edu/Graphics/color_table_gallery.shtml">PyNGL color maps</a>, and in some cases also adjust start and end colors:</p>
 </div>
 </div>
 </div>
@@ -9801,7 +9801,7 @@ OjAwBzkbdwAAABN0RVh0cHM6TGV2ZWwAQWRvYmUtMi4wCjmTdA0AAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>If you want to plot some smaller region there are two ways to do it - hard and easy. The easy one is to set <em>region='Global'</em> and specify min/max lat and lon:</p>
+<p>If you want to plot some smaller region there are two ways to do it - hard and easy. The easy one is to set <em>region=&#39;Global&#39;</em> and specify min/max lat and lon:</p>
 </div>
 </div>
 </div>
@@ -24493,7 +24493,7 @@ W+C1/lwYgiBa3pnjwjjfdgPvD+M/WZb9w7sDAAAAwNvqHR6Goqj20lhvddnb1hjyJQAAAID2xdhY
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>You can indicate depth of the fields by setting <em>levon=True</em> and by providing values from your depth variable (<em>lev</em> in our case):</p>
+<p>You can indicate depth of the fields by setting <em>levon=True</em> and by providing values from your depth variable (<em>lev</em> in our case): </p>
 </div>
 </div>
 </div>
@@ -29811,7 +29811,7 @@ AAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>It will put time stamp (Climatology in out case) and level as figure title, and content of the <em>.units</em> attribute from the data variable, as units. You can tune figures the same way as you do for <em>arctplt</em>.</p>
+<p>It will put time stamp (Climatology in out case) and level as figure title, and content of the <em>.units</em> attribute from the data variable, as units. You can tune figures the same way as you do for <em>arctplt</em>. </p>
 </div>
 </div>
 </div>
