--- a/smos_sea_ice_thickness.html
+++ b/smos_sea_ice_thickness.html
@@ -1747,10 +1747,11 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Task:</strong></p>
-<pre><code>Acces SMOS Sea Ice Thickness data</code></pre>
-<p><strong>Solution:</strong></p>
-<pre><code>pydap</code></pre>
+<p><strong>Task:</strong> </p>
+<pre><code>Acces SMOS Sea Ice Thickness data
+</code></pre><p><strong>Solution:</strong> </p>
+<pre><code>pydap
+</code></pre>
 </div>
 </div>
 </div>
@@ -1770,7 +1771,7 @@ jQuery(document).ready(function($) {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Sea ice thickens is one of the most important environmental variables in the Arctic, but unfortunately is one of the hardest to measure. Unlike sea ice concentration, which is measured by satellites operationally now for more than three decades, only recently we begin to obtain limited satellite sea ice thickness information from missions like <a href="http://icesat.gsfc.nasa.gov/icesat/">ICESat</a>, <a href="http://www.esa.int/Our_Activities/Observing_the_Earth/CryoSat">Cryosat-2</a> and <a href="http://www.esa.int/Our_Activities/Observing_the_Earth/The_Living_Planet_Programme/Earth_Explorers/SMOS">SMOS</a>. The later is not specifically dedicated to cryospheric applications, but turns out that its information can be used to obtain data about the thin sea ice.</p>
 <p>Here you can learn more about <a href="https://wiki.zmaw.de/ifm/SMOSIce">SMOS sea ice thickness project</a>.</p>
-<p>In the following we learn how to access a SMOS dataset with the OpenNDAP protocol. This allows the analysis of some parts of the data while the complete dataset can stay on the remote server. Data hosted by <a href="http://icdc.zmaw.de/l3c_smos_sit.html">ICDC</a>.</p>
+<p>In the following we learn how to access a SMOS dataset with the OpenNDAP protocol. This allows the analysis of some parts of the data  while the complete dataset can stay on the remote server. Data hosted by <a href="http://icdc.zmaw.de/l3c_smos_sit.html">ICDC</a>.</p>
 </div>
 </div>
 </div>
@@ -1779,7 +1780,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>We would need Python OpenNDAP client <a href="http://www.pydap.org/">pydap</a>.</p>
+<p>We would need Python OpenNDAP client <a href="http://www.pydap.org/">pydap</a>. </p>
 </div>
 </div>
 </div>
@@ -1823,7 +1824,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Let's have a look at the contents of the dataset</p>
+<p>Let&#39;s have a look at the contents of the dataset</p>
 </div>
 </div>
 </div>
@@ -1972,7 +1973,7 @@ array([ 35076.,  35100.,  35124.,  35148.,  35172.,  35196.,  35220.,
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Doesn't really look like a human readable time. Let's have a look at its units:</p>
+<p>Doesn&#39;t really look like a human readable time. Let&#39;s have a look at its units:</p>
 </div>
 </div>
 </div>
@@ -2012,7 +2013,7 @@ array([ 35076.,  35100.,  35124.,  35148.,  35172.,  35196.,  35220.,
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Here we define function to convert from 'hours since' to something more understandable:</p>
+<p>Here we define function to convert from &#39;hours since&#39; to something more understandable:</p>
 </div>
 </div>
 </div>
