--- a/time_series_analysis_with_pandas_part_2.html
+++ b/time_series_analysis_with_pandas_part_2.html
@@ -1748,9 +1748,10 @@ jQuery(document).ready(function($) {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Task:</strong></p>
-<pre><code>continue interactive analysis of time series (AO, NAO indexes)</code></pre>
-<p><strong>Module:</strong></p>
-<pre><code>pandas</code></pre>
+<pre><code>continue interactive analysis of time series (AO, NAO indexes)
+</code></pre><p><strong>Module:</strong></p>
+<pre><code>pandas
+</code></pre>
 </div>
 </div>
 </div>
@@ -1768,7 +1769,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>In the <a href="http://earthpy.org/pandas-basics.html">previous part</a> we looked at very basic ways of work with pandas. Here I am going to introduce couple of more advance tricks. We will use very powerful pandas IO capabilities to create time series directly from the text file, try to create seasonal means with <em>resample</em> and multi-year monthly means with <em>groupby</em>. At the end I will show how new functionality from the upcoming IPython 2.0 can be used to explore your data more efficiently with sort of a simple GUI (<em>interact</em> function). There might be easier or better ways to do some of the things discussed here, and I will be happy to hear about them in comments :)</p>
+<p>In the <a href="http://earthpy.org/pandas-basics.html">previous part</a> we looked at very basic ways of work with pandas. Here I am going to introduce couple of more advance tricks. We will use very powerful pandas IO capabilities to create time series directly from the text file, try to create seasonal means with <em>resample</em> and multi-year monthly means with <em>groupby</em>. At the end I will show how new functionality from the upcoming IPython 2.0 can be used to explore your data more efficiently with sort of a simple GUI (<em>interact</em> function). There might be easier or better ways to do some of the things discussed here, and I will be happy to hear about them in comments :) </p>
 </div>
 </div>
 </div>
@@ -1868,7 +1869,7 @@ jQuery(document).ready(function($) {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now let's open NAO. First remind ourselves how the file looks like:</p>
+<p>Now let&#39;s open NAO. First remind ourselves how the file looks like:</p>
 </div>
 </div>
 </div>
@@ -1985,9 +1986,9 @@ Name: 2, Length: 770
 <p>Some explanations:</p>
 <ul>
 <li>first argument is obviously the file name</li>
-<li>'' - regular expression, that describe separator.</li>
+<li>&#39;\s*&#39; - regular expression, that describe separator.</li>
 <li>parse_dates - combine columns 0 and 1, convert resulting column to dates and give it the name <em>&quot;dates&quot;</em></li>
-<li>header - don't use 0 row as header</li>
+<li>header - don&#39;t use 0 row as header</li>
 <li>index_col - make column 0 (this will be already result of the <em>parse_dates</em> parsing)</li>
 <li>squeeze - create Series instead of DataFrame.</li>
 </ul>
@@ -2112,7 +2113,7 @@ Name: 2, Length: 770
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>But our data are monthly means, so they are related not to some particular point in time, but rather to the time interval, or time span. We can convert time stamps in our Series to time periods, and then combine them.</p>
+<p>But our data are monthly means, so they are related not to some particular point in time, but rather to the time interval, or time span. We can convert time stamps in our Series to time periods, and then combine them. </p>
 </div>
 </div>
 </div>
@@ -2306,7 +2307,7 @@ pandas.tseries.period.PeriodIndex
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Initially pandas was created for analysis of financial information and it thinks not in seasons, but in quarters. So we have to resample our data to quarters. We also need to make a shift from standard quarters, so they correspond with seasons. This is done by using 'Q-NOV' as a time frequency, indicating that year in our case ends in November:</p>
+<p>Initially pandas was created for analysis of financial information and it thinks not in seasons, but in quarters. So we have to resample our data to quarters. We also need to make a shift from standard quarters, so they correspond with seasons. This is done by using &#39;Q-NOV&#39; as a time frequency, indicating that year in our case ends in November: </p>
 </div>
 </div>
 </div>
@@ -3057,7 +3058,7 @@ TkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>If you don't mind to sacrifice first two data points (that strictly speaking can't represent the whole winter of 1949-1950), there is another way to do similar thing by just resampling to 3M (3 months) interval starting from March (third data point):</p>
+<p>If you don&#39;t mind to sacrifice first two data points (that strictly speaking can&#39;t represent the whole winter of 1949-1950), there is another way to do similar thing by just resampling to 3M (3 months) interval starting from March (third data point):</p>
 </div>
 </div>
 </div>
@@ -4636,7 +4637,7 @@ gg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Say we would like to look at variability of our indexes by individual months, and also (if necessary) do a bit of smoothing in order to filter out high frequencies. Something like this will work:</p>
+<p>Say we would like to look at variability of our indexes by individual months, and also (if necessary) do a bit of smoothing in order to filter out high frequencies. Something like this will work: </p>
 </div>
 </div>
 </div>
@@ -5684,7 +5685,7 @@ gg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>And now you call <em>interact</em> with our previously defined function as first argument. Other arguments are our parameters with value limits and step size:</p>
+<p>And now you call <em>interact</em> with our previously defined function as first argument. Other arguments are our parameters with value limits and step size: </p>
 </div>
 </div>
 </div>
