--- a/tags.html
+++ b/tags.html
@@ -1735,9 +1735,10 @@ jQuery(document).ready(function($) {
         <li><a href="http://earthpy.org/tag/komod.html">komod</a> (2)</li>
         <li><a href="http://earthpy.org/tag/marinexplore.html">marinexplore</a> (1)</li>
         <li><a href="http://earthpy.org/tag/matplotlib.html">matplotlib</a> (6)</li>
+        <li><a href="http://earthpy.org/tag/netcdf.html">netCDF</a> (1)</li>
         <li><a href="http://earthpy.org/tag/numba.html">numba</a> (1)</li>
         <li><a href="http://earthpy.org/tag/numpy.html">numpy</a> (1)</li>
-        <li><a href="http://earthpy.org/tag/pandas.html">pandas</a> (3)</li>
+        <li><a href="http://earthpy.org/tag/pandas.html">pandas</a> (4)</li>
         <li><a href="http://earthpy.org/tag/pydap.html">pydap</a> (1)</li>
         <li><a href="http://earthpy.org/tag/pyngl.html">PyNGL</a> (2)</li>
         <li><a href="http://earthpy.org/tag/pyresample.html">pyresample</a> (1)</li>
